[package]
name = "utility-bot"
version = "0.1.0"
authors = ["David Buckley <david@davidbuckley.ca>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
serenity = { version = "0.9", features = ["cache", "framework", "standard_framework", "rustls_backend"] }
tokio = { version = "0.2", features = ["macros", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2" # needed so intrument works with async functions.
palette = "0.5.0"
