[package]
name = "utility-bot"
version = "0.1.0"
authors = ["David Buckley <david@davidbuckley.ca>"]
edition = "2018"

[lib]
name = "utility_bot"
doctest = false

[dependencies]
dotenv = "0.15"
serenity = { version = "0.10.8", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "utils", "framework", "standard_framework"]}
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2" # needed so intrument works with async functions.
palette = "0.5.0"
sqlx = { version = "0.4.0", features = [ "runtime-tokio-rustls", "sqlite", "macros" ] }
rand = "0.7"
