[tool.poetry]
name = "scheduled-tasks"
version = "0.1.0"
description = ""
authors = ["David Buckley <david@davidbuckley.ca>"]
readme = "README.md"

[tool.poetry.scripts]
scheduled-tasks = "scheduled_tasks.cli:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.3.2"}
toml = "^0.10.2"
"discord.py" = "^1.7.3"
pydantic = "^1.8.2"
python-crontab = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
